--- a/app/src/main/res/layout/open_list_film.xml
+++ b/app/src/main/res/layout/open_list_film.xml
@@ -1,67 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/red_200"
-        android:background="@drawable/border"
-        android:padding="8dp"
-        android:layout_marginBottom="8dp">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:ignore="MissingConstraints"
+        app:cardCornerRadius="10dp"
+        android:layout_marginTop="16dp">
 
-    <ImageView
-            android:id="@+id/lmFilmPoster"
-            android:layout_width="60dp"
-            android:layout_height="80dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/pobeg"
-            android:background="@drawable/border" />
-
-    <TextView
-            android:id="@+id/lmFilmTitle"
-            android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/lmFilmPoster"
-            app:layout_constraintTop_toTopOf="@id/lmFilmPoster"
-            app:layout_constraintBottom_toTopOf="@id/lmFilmGenre"
-            tools:text="Побег из Шоушенка"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/rubik_bold"
-            android:textSize="14sp"
-            android:textColor="@color/white_full" />
+            android:background="@color/red_200">
 
-    <TextView
-            android:id="@+id/lmFilmGenre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/lmFilmPoster"
-            app:layout_constraintStart_toStartOf="@id/lmFilmTitle"
-            app:layout_constraintTop_toBottomOf="@id/lmFilmTitle"
-            tools:text="Драма"
-            android:fontFamily="@font/rubik_bold"
-            android:textSize="14sp"
-            android:textColor="@color/another_white" />
+        <TextView
+                android:id="@+id/item_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="Название списка"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="0dp"
+                android:textColor="@color/white_text"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@id/img_list"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/film_count"/>
 
-    <TextView
-            android:id="@+id/lmFilmYear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/lmFilmTitle"
-            app:layout_constraintTop_toTopOf="@id/lmFilmTitle"
-            tools:text="1994"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/rubik_bold"
-            android:textSize="14sp"
-            android:textColor="@color/another_white" />
+        <TextView
+                android:id="@+id/film_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:text="5 фильмов"
+                android:textColor="@color/white_text"
+                android:layout_marginBottom="28dp"
+                android:layout_marginRight="16dp"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@id/item_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/item_title"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <ImageButton
-            android:id="@+id/lmMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_menu_dots"
-            android:background="@android:color/transparent"
-            app:layout_constraintTop_toTopOf="@id/lmFilmPoster"
-            app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+                android:id="@+id/img_list"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                tools:srcCompat="@tools:sample/avatars"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintCircleRadius="180dp"
+                android:background="@color/red_200"
+                android:foreground="@drawable/rounded_fg_light"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
