--- a/app/src/main/res/layout/friends_profile.xml
+++ b/app/src/main/res/layout/friends_profile.xml
@@ -9,7 +9,7 @@
         android:background="@color/red_400">
 
     <TextView
-            android:id="@+id/friend_textProfile"
+            android:id="@+id/friendTextProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -18,12 +18,12 @@
             android:textStyle="bold"
             android:textSize="22sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/friend_photo"
+            app:layout_constraintStart_toEndOf="@id/friendPhoto"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="60dp" />
 
     <TextView
-            android:id="@+id/friend_lists"
+            android:id="@+id/friendLists"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,13 +33,13 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
-            app:layout_constraintLeft_toLeftOf="@id/friend_textProfile"
-            app:layout_constraintRight_toLeftOf="@+id/friend_subscribers"
+            app:layout_constraintTop_toBottomOf="@id/friendTextProfile"
+            app:layout_constraintLeft_toLeftOf="@id/friendTextProfile"
+            app:layout_constraintRight_toLeftOf="@+id/friendSubscribers"
             tools:ignore="SmallSp" />
 
     <TextView
-            android:id="@+id/friend_subscribers"
+            android:id="@+id/friendSubscribers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -48,13 +48,13 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
-            app:layout_constraintLeft_toRightOf="@id/friend_lists"
-            app:layout_constraintRight_toLeftOf="@+id/friend_subscriptions"
+            app:layout_constraintTop_toBottomOf="@id/friendTextProfile"
+            app:layout_constraintLeft_toRightOf="@id/friendLists"
+            app:layout_constraintRight_toLeftOf="@+id/friendSubscriptions"
             tools:ignore="SmallSp" />
 
     <TextView
-            android:id="@+id/friend_subscriptions"
+            android:id="@+id/friendSubscriptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -63,13 +63,13 @@
             android:textStyle="bold"
             android:textSize="12sp"
             android:padding="2dp"
-            app:layout_constraintTop_toBottomOf="@id/friend_textProfile"
-            app:layout_constraintLeft_toRightOf="@id/friend_subscribers"
-            app:layout_constraintRight_toRightOf="@id/friend_textProfile"
+            app:layout_constraintTop_toBottomOf="@id/friendTextProfile"
+            app:layout_constraintLeft_toRightOf="@id/friendSubscribers"
+            app:layout_constraintRight_toRightOf="@id/friendTextProfile"
             tools:ignore="SmallSp" />
 
     <ImageView
-            android:id="@+id/friend_photo"
+            android:id="@+id/friendPhoto"
             android:layout_width="124dp"
             android:layout_height="124dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -88,6 +88,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="226dp"
             tools:ignore="ContentDescription" />
+
     <ImageButton
             android:id="@+id/backBtnCh"
             android:layout_width="wrap_content"
@@ -115,7 +116,7 @@
             android:layout_marginStart="7dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/friend_listsRV"
+            android:id="@+id/friendListsRV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -124,23 +125,23 @@
             android:layout_marginBottom="10dp"
             app:layout_constraintTop_toTopOf="@id/dashed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/show_all"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/show_all"
-            android:layout_width="115dp"
-            android:layout_height="25dp"
-            android:textColor="@color/white_full"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:textSize="14sp"
-            android:textAlignment="center"
-            android:text="@string/show_all_string"
-            android:background="@drawable/subscribe"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="11dp"
-            android:layout_marginBottom="55dp" />
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/show_all"-->
+<!--            android:layout_width="115dp"-->
+<!--            android:layout_height="25dp"-->
+<!--            android:textColor="@color/white_full"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textAlignment="center"-->
+<!--            android:text="@string/show_all_string"-->
+<!--            android:background="@drawable/subscribe"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            android:layout_marginStart="11dp"-->
+<!--            android:layout_marginBottom="55dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
