--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -48,7 +48,6 @@
             android:textSize="12sp"
             android:padding="2dp"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
-            app:layout_constraintLeft_toLeftOf="@id/textProfile"
             app:layout_constraintRight_toLeftOf="@+id/subscribers"
             tools:ignore="SmallSp" />
 
@@ -63,8 +62,8 @@
             android:textSize="12sp"
             android:padding="2dp"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
-            app:layout_constraintLeft_toRightOf="@id/lists"
-            app:layout_constraintRight_toLeftOf="@+id/subscriptions"
+            app:layout_constraintStart_toEndOf="@id/profilePhoto"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="SmallSp" />
 
     <TextView
@@ -79,7 +78,6 @@
             android:padding="2dp"
             app:layout_constraintTop_toBottomOf="@id/textProfile"
             app:layout_constraintLeft_toRightOf="@id/subscribers"
-            app:layout_constraintRight_toRightOf="@id/textProfile"
             tools:ignore="SmallSp" />
 
     <ImageView
